# DoseCalcs-Gui

./: .readthedocs.yaml  DoseCalcs.pro  README.md
PackagesAndFiles/: Config  macros.mac
core/: CMakeLists.txt  CMakeLists.txt.user.7581c3f  CMakeLists.txt.user.abd614f  analysis.cc  merge.cc  simulate.cc
core/include/: DicomFileMgr.hh  DicomFilePET.hh  DicomVFile.hh  DicomVFileImage.hh  G4DoseCalcsAnalysis.hh  G4TAccelerator.hh  G4TActionInitialization.hh  G4TCPPGeometryFormat.hh  G4TClass.hh  G4TComptonProcess.hh  G4TDCMHandler.hh  G4TDCMZSliceHeader.hh  G4TDCMZSliceMerged.hh  G4TDetectorEventAction.hh  G4TDetectorGeometry.hh  G4TDetectorStackingAction.hh  G4TDetectorSteppingAction.hh  G4TDirectPrimaryGeneratorAction.hh  G4TDirectToFilesPrimaryGeneratorAction.hh  G4TDirectVoxelsPrimaryGeneratorAction.hh  G4TEventActionForCriticality.hh  G4TFileRadionuclidePrimaryGeneratorAction.hh  G4TFlashRadioTherapyGeometry.hh  G4TGeometryBasedBiasingOperator.hh  G4TGeometryMessenger.hh  G4THadrontherapyDetectorConstruction.hh  G4THadrontherapyDetectorROGeometry.hh  G4THadrontherapyMatrix.hh  G4THadrontherapyModulator.hh  G4TKleinNishinaCompton.hh  G4TMessenger.hh  G4TModifiedPrimaryGeneratorAction.hh  G4TModifiedSteppingAction.hh  G4TMyGeometry.hh  G4TNestedParamSteppingAction.hh  G4TNeutronCriticalityPrimaryGeneratorAction.hh  G4TNeutronPhysics.hh  G4TNeutronPhysicsList.hh  G4TNuclearReactorGeometry.hh  G4TOrganVoxelSegmentation.hh  (+36 more)
core/src/: DicomFileCT.cc  DicomFileMgr.cc  DicomFilePET.cc  DicomFilePlan.cc  DicomFileStructure.cc  DicomROI.cc  DicomVFileImage.cc  G4DoseCalcsAnalysis.cc  G4TAccelerator.cc  G4TActionInitialization.cc  G4TCPPGeometryFormat.cc  G4TClass.cc  G4TComptonProcess.cc  G4TDCMHandler.cc  G4TDCMZSliceHeader.cc  G4TDCMZSliceMerged.cc  G4TDetectorEventAction.cc  G4TDetectorStackingAction.cc  G4TDetectorSteppingAction.cc  G4TDetectotGeometry.cc  G4TDirectPrimaryGeneratorAction.cc  G4TDirectToFilesPrimaryGeneratorAction.cc  G4TDirectVoxelsPrimaryGeneratorAction.cc  G4TEventActionForCriticality.cc  G4TFileRadionuclidePrimaryGeneratorAction.cc  G4TFlashRadioTherapyGeometry.cc  G4TGeometryBasedBiasingOperator.cc  G4TGeometryMessenger.cc  G4THadrontherapyDetectorConstruction.cc  G4THadrontherapyDetectorROGeometry.cc  G4THadrontherapyModulator.cc  G4TKleinNishinaCompton.cc  G4TMessenger.cc  G4TModifiedPrimaryGeneratorAction.cc  G4TModifiedSteppingAction.cc  G4TMyGeometry.cc  G4TNestedParamSteppingAction.cc  G4TNeutronCriticalityPrimaryGeneratorAction.cc  G4TNeutronPhysics.cc  G4TNeutronPhysicsList.cc  (+41 more)
core_build/: CMakeCache.txt  Makefile  cmake_install.cmake  merge
docs/: Commands.rst  GUI.rst  GeneralConcept.rst  Installation.rst  conf.py  index.rst
docs/FilesDownloads/DifferentMethods/: G4TCPPGeometryFormat.cc  Testes.ast  macros.mac
docs/FilesDownloads/DifferentMethods/Results/: AE@for@Rank@0@Thread@0@ORNLAdultMale@gamma@Liver@0.01  AE@for@Rank@0@Thread@1@ORNLAdultMale@gamma@Liver@0.015  AE@for@Rank@0@Thread@2@ORNLAdultMale@gamma@Liver@0.02  ResultsData
docs/FilesDownloads/ForAnalysis/: MIRDWithGateSAFData.txt  ResultsData
docs/FilesDownloads/ForAnalysis/PlotsAndTables/: DoseCalcs_Particles_SAF.csv  DoseCalcs_RadioNucleides_SAF.csv
docs/FilesDownloads/MIRD/Results/: AE@for@Rank@0@Thread@0@phantom0@gamma@Liver@1  AE@for@Rank@0@Thread@1@phantom0@gamma@Liver@0.01  AE@for@Rank@0@Thread@2@phantom0@gamma@Liver@0.015  StylizedMIRD1976SAFData.txt
docs/FilesExamples/: AE@for@Rank@0@Thread@2@ORNLAdultMale@gamma@Brain@1  CrossSectionData  ResultsData  macros.mac
docs/_build/doctrees/: Applications.doctree  Commands.doctree  GUI.doctree  GeneralConcept.doctree  Installation.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  Applications.html  Commands.html  GUI.html  GeneralConcept.html  Installation.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_downloads/06add33e95dbba9b9f97452ea49ba9d1/: StylizedORNL1987SAFData.txt
docs/_build/html/_downloads/2339df07a8c88c5ee66de709baf0c936/: ResultsData
docs/_build/html/_downloads/333f879d3ab4a6e3f36eaa7988e8709d/: AnalysisMacros.mac
docs/_build/html/_downloads/47b20d097eaa9b93a7c951a989caddf1/: ResRefLatexTables
docs/_build/html/_downloads/4f9fa46f19647ec80960c972e9cea20e/: f.tar.xz
docs/_build/html/_downloads/68e51f2e60caccef2f75a65fb141ab60/: macros.mac
docs/_build/html/_downloads/6e0084be8421277b3c443ca667bb2a52/: MIRDTEXTPhantom.geom
docs/_build/html/_downloads/744172ccd6bd0fc8f686e1b125eb927f/: CrossSectionData
docs/_build/html/_downloads/74cbc65d8cd9e548026d71c06c294b23/: Thyroid.geom
docs/_build/html/_downloads/90b9af3579e3eb7dc6e5cd6c907a2d0b/: RegionsLatexTables
docs/_build/html/_downloads/98f6e6c1469cd32507596148aa467c7d/: DoseCalcs-ORNLAdultMale_Particles_SAF.csv
docs/_build/html/_downloads/9ae96f91646326c17b43f0ab861a2d75/: f.tar.xz
docs/_build/html/_downloads/c1f07cbcffa7894b1f70b638ea47df78/: MIRDGDMLPhantom.gdml
docs/_build/html/_sources/: Applications.rst.txt  Commands.rst.txt  GUI.rst.txt
docs/images/: DoseCalcsPaper.tex  RegionsLatexTables  RegionsLatexTables.txt  ResRefLatexTables  ResRefLatexTables.txt  ResultsData  macrosGdml.mac
gui/: GdmlFormatVolumesCreation.cpp  GdmlFormatVolumesCreation.h  GdmlFormatVolumesCreation.ui  README  Resources.qrc  customtextedit.cpp  customtextedit.h  dicomreaderseg.cpp  dicomreaderseg.h  dicomreaderseg.ui  downloadManager.cpp  downloadManager.h  errorManager.cpp  errorManager.h  filesManager.cpp  filesManager.h  geant4_app_init.cpp  geant4_app_init.h  geometriesvisualization.cpp  geometriesvisualization.h  geometriesvisualization.ui  geometrymodellingeditor.cpp  geometrymodellingeditor.h  geometrymodellingeditor.ui  graphsDataGeneration.h  highlighter.cpp  highlighter.h  httpdownload.cpp  httpdownload.h  httpdownload.ui  inputsManager.cpp  installDialog.ui  installManager.cpp  installManager.h  installationDialog.cpp  installationDialog.h  installationDialog.ui  main.cpp  mainGeant4AppCore.cpp  mainGeant4AppCore.h  (+22 more)
(+4 files in other folders)
